# dynatrace-otlp-profiling-poc

./: .dockerignore  .env.example  .gitignore  INSTALL.md  LICENSE  README.md  docker-compose.infra.yml  docker-compose.yml
collector/: config.yaml
docs/: architecture.md
examples/csharp/: README.md
examples/csharp/DtProfilingDemo/: Dockerfile  DtProfilingDemo.csproj  Program.cs
examples/csharp/DtProfilingDemo/Controllers/: BenchmarkController.cs
examples/go/: README.md  main.go
examples/java/: README.md
examples/nodejs/: README.md
examples/python-django/: README.md
examples/python-flask/: Dockerfile  app.py  docker-compose.yml  requirements.txt
load-generator/: Dockerfile  generator.py  requirements.txt
sample-app/: Dockerfile  app.py  gunicorn.conf.py  requirements.txt
sdk/csharp/DynatraceOtlpProfiler/: AspNetCoreExtensions.cs  DynatraceOtlpProfiler.csproj  OtlpExporter.cs  Profiler.cs  README.md  SamplingContext.cs  StackSampler.cs
sdk/python/: README.md  pyproject.toml
sdk/python/dt_profiler/: __init__.py  otlp_exporter.py  sampler.py
sdk/python/tests/: test_exporter.py  test_otlp.py  test_sampler.py
validator/: Dockerfile  server.py
